# gen/typescript/qdrant/cloud/serverless/space/v1/space-SpaceService_connectquery.js
@@ -7,16 +7,25 @@ import { SpaceService } from "./space_pb.js";
 /**
  * ListSpaces returns all spaces for the authenticated user
  * Required Permissions:
- * - read:spaces
+ * - read:serverless_spaces
  *
  * @generated from rpc qdrant.cloud.serverless.space.v1.SpaceService.ListSpaces
  */
 export const listSpaces = SpaceService.method.listSpaces;
 
 /**
+ * Gets a space in the account identified by the given ID.
+ * Required permissions:
+ * - read:serverless_spaces
+ *
+ * @generated from rpc qdrant.cloud.serverless.space.v1.SpaceService.GetSpace
+ */
+export const getSpace = SpaceService.method.getSpace;
+
+/**
  * CreateSpace creates a new space with the specified configuration
  * Required Permissions:
- * - write:spaces
+ * - write:serverless_spaces
  *
  * @generated from rpc qdrant.cloud.serverless.space.v1.SpaceService.CreateSpace
  */
@@ -25,7 +34,7 @@ export const createSpace = SpaceService.method.createSpace;
 /**
  * Updates a space in the account identified by the given ID.
  * Required Permissions:
- * - write:spaces
+ * - write:serverless_spaces
  *
  * @generated from rpc qdrant.cloud.serverless.space.v1.SpaceService.UpdateSpace
  */
@@ -34,7 +43,7 @@ export const updateSpace = SpaceService.method.updateSpace;
 /**
  * DeleteSpace removes a space by ID
  * Required Permissions:
- * - delete:spaces
+ * - delete:serverless_spaces
  *
  * @generated from rpc qdrant.cloud.serverless.space.v1.SpaceService.DeleteSpace
  */
